@@ -49,6 +49,7 @@ depth: 1
  * Extract generic `HistoryView` from snippets and add it to `ModelViewSet` (Sage Abdullah)
  * Add generic `UsageView` to `ModelViewSet` (Sage Abdullah)
  * Add the ability to define listing buttons on generic `IndexView` (Sage Abdullah)
+ * Add a visual progress bar to the output of the `wagtail_update_image_renditions` management command (Faishal Manzar)
 
 ### Bug fixes
 
